microservices/k8s/files/identityserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityserver-deploy
  namespace: pantry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityserver
  template:
    metadata:
      labels:
        app: identityserver
    spec:
      containers:
        - name: identityserver
          image: matheus06/identityserver:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: pantry-app-identityserver
  namespace: pantry
spec:
  type: ClusterIP
  selector:
    app: identityserver
  ports:
  - name: identityserver
    protocol: TCP
    port: 80
    targetPort: 8080
