microservices/k8s/files/pantry-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pantry-manager-deploy
  namespace: pantry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pantry-manager
  template:
    metadata:
      labels:
        app: pantry-manager
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "pantry-manager"
        dapr.io/app-port: "8080"
        dapr.io/enable-api-logging: "true"  
    spec:
      containers:
        - name: pantry-manager
          image: matheus06/pantry-manager:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: pantry-app-pantry-manager
  namespace: pantry
spec:
  type: ClusterIP
  selector:
    app: pantry-manager
  ports:
  - name: pantry-manager
    protocol: TCP
    port: 80
    targetPort: 8080
