microservices/k8s/files/product-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-manager-deploy
  namespace: pantry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-manager
  template:
    metadata:
      labels:
        app: product-manager
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "product-manager"
        dapr.io/app-port: "8080"
        dapr.io/enable-api-logging: "true"  
    spec:
      containers:
        - name: product-manager
          image: matheus06/product-manager:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: pantry-app-product-manager
  namespace: pantry
spec:
  type: ClusterIP
  selector:
    app: product-manager
  ports:
  - name: product-manager
    protocol: TCP
    port: 80
    targetPort: 8080
