microservices/k8s/files/recipe-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-manager-deploy
  namespace: pantry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-manager
  template:
    metadata:
      labels:
        app: recipe-manager
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "recipe-manager"
        dapr.io/app-port: "80"
        dapr.io/enable-api-logging: "true"  
    spec:
      containers:
        - name: recipe-manager
          image: matheus06/recipe-manager:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: recipe-manager-clusterip-srv
  namespace: pantry
spec:
  type: ClusterIP
  selector:
    app: recipe-manager
  ports:
  - name: recipe-manager
    protocol: TCP
    port: 80
    targetPort: 80
