microservices/k8s/files/pantry-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pantry-ingress-service
  namespace: pantry
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    ingressClassName: nginx
    tls:
    - hosts:
      - localdev-tls.me
      secretName: ingress-cert
    rules:
     - host: localdev-tls.me
       http:
        paths:
        - path: /api-product(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: pantry-app-product-manager
              port:
                number: 80
     - host: localdev-tls.me
       http:
        paths:
        - path: /api-pantry(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: pantry-app-pantry-manager
              port:
                number: 80
     - host: localdev-tls.me
       http:
        paths:
        - path: /api-recipe(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: pantry-app-recipe-manager
              port:
                number: 80
     - host: localdev-tls.me
       http:
        paths:
        - path: /api-scheduler(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: pantry-app-scheduler
              port:
                number: 80
     - host: localdev-tls.me
       http:
        paths:
        - path: /api-identity(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: pantry-app-identityserver
              port:
                number: 80
        - path: /api-identity(/|$)(.*)
          pathType: Prefix
          backend:
           service:
             name: identity-core-is4-service
             port:
               number: 443
